--- a/TP5/android/gradle.properties
+++ b/TP5/android/gradle.properties
@@ -1,3 +1,5 @@
 org.gradle.jvmargs=-Xmx4G -XX:MaxMetaspaceSize=2G -XX:+HeapDumpOnOutOfMemoryError
 android.useAndroidX=true
 android.enableJetifier=true
+org.gradle.java.home=C:\ \Users\\User\\Desktop\\openjdk-17_windows-x64_bin\\jdk-17
+# org.gradle.java.home=H:\\Mon Drive\\Documents\\Travail\\Atelier\\Maxime Tellene\\app_mobile\\jdk-17
